# projecteuler

./: .gitattributes  .gitignore  .markdownlint.json  .prettierrc.json  LICENSE  README.md  index.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
.bin/: new_page.js
.vitepress/: config.mts
GEL/: p0001.gel  p001.gel
blog/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  001.md  0010.md  0011.md  index.md
cuelang/: .gitignore  p0001.constant.cue  p0001.cue  p0002.cue  p0002.forward.cue  p0002.golden.cue  p0003.cue  primes.cue  primes.sh
functions/: latest.js
golang/: go.mod  main.go  main_test.go  p0001.go  p0001_test.go  p0002.go  p0003.go  p0004.go  p0005.go  p0006.go  p0007.go  p0008.go  p0009.go  p0010.go  p0011.go  p0012.go  p0013.go  p0014.go  p0015.go  p0016.go  p0017.go  p0018.go  p0019.go  p0020.go  p0021.go  p0022.go  p0023.go  p0024.go  p0025.go  p0026.go  p0027.go  p0028.go  p0029.go  p0030.go  primes.go  primes_test.go  solutions.go  solutions_test.go
ocaml/: README.md  dune-project  gcd.ml  p0001.ml  p0002.ml  p0003.ml  p0004.ml  p0005.ml  p0006.ml  p0007.ml  p0008.ml  pe100.opam
ocaml/lib/: dune
pages/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  0010.md  0011.md  0012.md  0013.md  0014.md  about.md  index.md  solutions.data.ts
prolog/: p0001.naive.prolog  p0001.select.prolog  p0002.every.prolog  p0002.select.prolog  p0003.prolog  p0004.prolog
public/: pe100.json  robots.txt
python/: digits.py  p0001.py  p0002.py  p0003.py  p0004.py  p0005.py  p003.py  (+51 more)
(+42 files in other folders)
